wip - migrate filter
Signed-off-by: Andrea Tabone <andrea.tabone@broadcom.com>